# Wallpaper_classifier

./: .gitignore  Cargo.toml  README.md  freeze.sh  main.py  pyproject.toml
src/: main.rs  tests.rs
