[tool.poetry]
name = "wallpaper_classifier"
version = "0.1.0"
description = ""
authors = ["Kuan-Lun Chen <polar2031@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
